src/core-crm/objects/International_Tier__c/International_Tier__c.object-meta.xml
<CustomObject>
    <description>International Tiers - Specific to Enquiries</description>
    <label>International Tier</label>
    <nameField>
        <displayFormat>ITR-{0000}</displayFormat>
        <label>International Tier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>International Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>