src/core-crm/objects/International_Tier__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag for active Country configuration in Country Tier table</description>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>