src/core-crm/objects/International_Tier__c/fields/Tier_Category__c.field-meta.xml
<CustomField>
    <fullName>Tier_Category__c</fullName>
    <description>Grouping of Countries</description>
    <label>Tier Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
            <value>
                <fullName>Developed Nations</fullName>
            </value>
            <value>
                <fullName>Untiered - Unrestricted</fullName>
            </value>
            <value>
                <fullName>Untiered - Restricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>