src/core-crm/objects/International_Tier__c/fields/Tier_Priority__c.field-meta.xml
<CustomField>
    <fullName>Tier_Priority__c</fullName>
    <description>Priority assigned to the Tier Category</description>
    <label>Tier Priority</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>