src/core-crm/objects/International_Tier__c/fields/Tier_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Tier_Subcategory__c</fullName>
    <label>Tier Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restricted</fullName>
            </value>
            <value>
                <fullName>Unrestricted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>