src/core-crm/objects/International_Tier__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Name__c</columns>
    <columns>Tier_Priority__c</columns>
    <columns>Tier_Category__c</columns>
    <columns>IsActive__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>